cambios en el front

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,6 +39,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/pacientes.html">Pacientes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/turnos.html">Turnos</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a
                             class="nav-link dropdown-toggle"
@@ -51,17 +54,19 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="dropdown-item" href="/agregar_odontologo.html"
-                            >Agregar Odontologo</a
-                            >
+                            <a class="dropdown-item" href="/agregar_odontologo.html">
+                            Agregar Odontologo
+                        </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="/agregar_paciente.html"
-                            >Agregar Pacientes</a
-                            >
+                            <a class="dropdown-item" href="/agregar_paciente.html">
+                                Agregar Pacientes
+                            </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="/turnos.html">Listar turnos</a>
+                            <a class="dropdown-item" href="/agregar_turnos.html">
+                                Agregar Turnos
+                            </a>
                         </li>
                     </ul>
                 </li>
